Update gdb for x command.

--- a/_posts/2014-03-24-gdb-basic.markdown
+++ b/_posts/2014-03-24-gdb-basic.markdown
@@ -18,6 +18,29 @@ gdb basic
 A. 启动新的终端输入tty，可以查看对应的设备文件，假设是/dev/pts/7
 B. 在gdb窗口输入tty /dev/pts/7，然后程序的输出就可以定向到步骤A启动的终端中
 
+### 2. 查看内存（x命令）
+格式为x/nfu <addr>
+- x是examine 的缩写
+
+- n表示要显示的内存单元的个数
+
+- f表示显示方式, 可取如下值
+x 按十六进制格式显示变量
+d 按十进制格式显示变量
+u 按十进制格式显示无符号整型
+o 按八进制格式显示变量
+t 按二进制格式显示变量
+a 按十六进制格式显示变量
+i 指令地址格式
+c 按字符格式显示变量
+f 按浮点数格式显示变量
+
+- u表示一个地址单元的长度
+b 表示单字节
+h 表示双字节
+w 表示四字节
+g 表示八字节
+
 ## 动态内存检查工具
 
 ### 1. efence调试工具
