--- a/_posts/2015-03-25-git-usage.markdown
+++ b/_posts/2015-03-25-git-usage.markdown
@@ -23,9 +23,7 @@ Git Usage
 
 ### 4. git diff
 查看当前文件和暂存区域的差别（也就是修改之后还没有暂存起来的变化内容）
-
 git diff --staged
-
 查看已经暂存起来的文件和上次提交快照之间的差异
 
 ### 5. git ignore
@@ -78,7 +76,7 @@ git log --merges branch ^other_branch // 显示branch包含的，但other_branch
 ### 9. 限制git log输出长度
 --since=2,week（也可以是具体某天2012-12-30） / --until=
 
-10. git branch -v
+### 10. git branch -v
 查看各分支最后一次提交
 
 git branch --merged
